[package]
name = "specs-physics"
version = "0.4.0"
authors = ["Benjamin Amling <benjamin@amling.net>", "Kel <x@unclear.info>", "jojolepro <jojolepromain@gmail.com>"]
repository = "https://github.com/amethyst/specs-physics.git"
homepage = "https://github.com/amethyst/specs-physics.git"
edition = "2018"

license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/specs-physics"
description = "Integration with nphysics for the SPECS Parallel ECS."

keywords = ["specs", "nphysics", "nphysics3d"]

[features]
default = ["dim3"]
dim3 = ["ncollide3d", "nphysics3d"]
dim2 = ["ncollide2d", "nphysics2d"]
amethyst = ["amethyst_core"]

[dependencies]
log = "0.4"
objekt = "0.1"
shrinkwraprs = "0.2"

specs = "0.15"
specs-hierarchy = "0.5"
nalgebra = "0.18"

ncollide2d = { version = "0.20", optional = true }
ncollide3d = { version = "0.20", optional = true }

nphysics2d = { version = "0.12", optional = true }
nphysics3d = { version = "0.12", optional = true }

amethyst_core = { version = "0.8", optional = true }

[dev-dependencies]
simple_logger = "1.3"
approx = "0.3"

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["dim3"]

[[example]]
name = "hierarchy"
path = "examples/hierarchy.rs"
required-features = ["dim3"]

[[example]]
name = "positions"
path = "examples/positions.rs"
required-features = ["dim3"]

[[example]]
name = "collision"
path = "examples/collision.rs"
required-features = ["dim3"]

[[example]]
name = "events"
path = "examples/events.rs"
required-features = ["dim3"]

