[package]
name = "specs-physics"
version = "0.4.0"
authors = ["Benjamin Amling <benjamin@amling.net>", "Kel <x@unclear.info>", "jojolepro <jojolepromain@gmail.com>"]
repository = "https://github.com/amethyst/specs-physics.git"
homepage = "https://github.com/amethyst/specs-physics.git"
edition = "2018"

license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/specs-physics"
description = "Integration with nphysics for the SPECS Parallel ECS."

keywords = ["specs", "nphysics", "nphysics3d"]

[features]
default = ["dim3", "nightly", "amethyst"]
dim3 = ["ncollide3d", "nphysics3d"]
dim2 = ["ncollide2d", "nphysics2d"]
nightly = ["specs/nightly"]

[dependencies]
log = "0.4"
objekt = "0.1"
shrinkwraprs = "0.2"

specs = "0.15"
specs-hierarchy = "0.5"
nalgebra = "0.19"

ncollide2d = { version = "0.21", optional = true }
ncollide3d = { version = "0.21", optional = true }

nphysics2d = { version = "0.13", optional = true }
nphysics3d = { version = "0.13", optional = true }

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"
optional = true
default-features = false
features = ["vulkan"]

[dev-dependencies]
simple_logger = "1.3"
approx = "0.3"
serde = { version = "1.0", features = ["derive"] }
